...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/editTextParentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".7"
                android:background="?attr/colorPrimary"
                android:gravity="start"
                android:orientation="vertical">

                <com.example.avjindersinghsekhon.minimaltodo.Utility.CustomTextInputLayout
                    android:id="@+id/toDoCustomTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                    <EditText
                        android:id="@+id/userToDoEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:gravity="start|bottom"
                        android:hint="@string/title"
                        android:inputType="textAutoCorrect|textCapSentences"
                        android:lines="2"
                        android:maxLines="3"
                        android:textColor="@color/icons" />
                </com.example.avjindersinghsekhon.minimaltodo.Utility.CustomTextInputLayout>

                <EditText
                    android:id="@+id/userToDoBonusEditText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:inputType="number"
                    android:hint="@string/bonuses"
                    android:textColor="@color/icons" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/todoReminderAndDateContainerLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical">


...
                        android:paddingTop="8dp"
                        android:text="@string/remind_me"
                        android:textColor="@color/secondary_text"
                        android:textSize="16sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/toDoHasDateSwitchCompat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp" />
...
                        android:focusableInTouchMode="false"
                        android:textIsSelectable="false"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/toDoEnterDateLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
...
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="top">


                        <EditText
                            android:id="@+id/newTodoDateEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:editable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
...
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="\@"
                            android:textColor="?attr/colorAccent" />

                        <EditText
                            android:id="@+id/newTodoTimerEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:editable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
...

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/makeToDoFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_send_white_18dp"
            app:fabSize="normal"
...
